BJS2-43651 [Группировка пользователей по возрасту] Исправление замечания